; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_gindatapage.c_GinDataLeafPageGetItemsToTbm.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/access/gin/extr_gindatapage.c_GinDataLeafPageGetItemsToTbm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @GinDataLeafPageGetItemsToTbm(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @GinPageIsCompressed(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %2
  %13 = load i32, i32* %3, align 4
  %14 = call i32* @GinDataLeafPageGetPostingList(i32 %13)
  store i32* %14, i32** %7, align 8
  %15 = load i32, i32* %3, align 4
  %16 = call i32 @GinDataLeafPageGetPostingListSize(i32 %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32*, i32** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @ginPostingListDecodeAllSegmentsToTbm(i32* %17, i32 %18, i32* %19)
  store i32 %20, i32* %6, align 4
  br label %32

21:                                               ; preds = %2
  %22 = load i32, i32* %3, align 4
  %23 = call i32 @dataLeafPageGetUncompressed(i32 %22, i32* %6)
  store i32 %23, i32* %5, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp sgt i32 %24, 0
  br i1 %25, label %26, label %31

26:                                               ; preds = %21
  %27 = load i32*, i32** %4, align 8
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @tbm_add_tuples(i32* %27, i32 %28, i32 %29, i32 0)
  br label %31

31:                                               ; preds = %26, %21
  br label %32

32:                                               ; preds = %31, %12
  %33 = load i32, i32* %6, align 4
  ret i32 %33
}

declare dso_local i64 @GinPageIsCompressed(i32) #1

declare dso_local i32* @GinDataLeafPageGetPostingList(i32) #1

declare dso_local i32 @GinDataLeafPageGetPostingListSize(i32) #1

declare dso_local i32 @ginPostingListDecodeAllSegmentsToTbm(i32*, i32, i32*) #1

declare dso_local i32 @dataLeafPageGetUncompressed(i32, i32*) #1

declare dso_local i32 @tbm_add_tuples(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
